[package]
name = "work-experience-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
log = "0.4.20"
dotenv = "0.15.0"
env_logger = "0.10.0"
sea-orm = { version = "0.12.2", features = [ "sqlx-mysql", "runtime-async-std-native-tls", "macros" ] }