[package]
name = "work-experience-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
#tokio = { version = "1.32.0", features = ["full"] }
log = "0.4.20"
dotenv = "0.15.0"
env_logger = "0.10.0"

#SeaORM
sea-orm = { version = "0.12.2", features = [ "sqlx-mysql", "runtime-async-std-native-tls", "macros" ] }

#Web-server
axum = "0.6.9"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1.25", features = ["full"] }
tower = { version = "0.4", features = ["full"] }

#JSON出力
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

chrono = "0.4.18"

axum-template = "0.14.0"
tera = "1.17.1"